--- a/templates/perfiles/detail.html
+++ b/templates/perfiles/detail.html
@@ -28,7 +28,7 @@
             <div class="rounded-top text-white d-flex flex-row" style="background-color: #000; height:200px;">
               <div class="ms-4 mt-5 d-flex flex-column" style="width: 150px;">
                 <img src="{{profile.picture.url}}" alt="{{profile.user.username}} Profile Picture" class="img-fluid img-thumbnail mt-4 mb-2" style="width: 150px; z-index: 1">
-                <a class="btn btn-outline-dark" href="{% url 'perfiles:edit_details' %}" role="button" data-mdb-ripple-color="dark" style="z-index: 1;">
+                <a class="btn btn-outline-dark" href="{% url 'perfiles:edit_profile' %}" data-mdb-ripple-color="dark" style="z-index: 1;">
                   Edit profile
                 </a>
               </div>
