dropdown menu user

--- a/templates/perfiles/edit_profile.html
+++ b/templates/perfiles/edit_profile.html
@@ -61,6 +61,17 @@
           <label class="small font-weight-bold">{{ user_form.last_name.label }}</label>
           {{ user_form.last_name }}
 
+          {% comment %} <label class="small font-weight-bold">{{ user_extra_form.parent.label }}</label>
+          {{ user_extra_form.parent }}
+          <label class="small font-weight-bold">{{ user_extra_form.picture.label }}</label>
+          {{ user_extra_form.picture }}
+          <label class="small font-weight-bold">{{ user_extra_form.Banner.label }}</label>
+          {{ user_extra_form.Banner }}
+          <label class="small font-weight-bold">{{ user_extra_form.Bio.label }}</label>
+          {{ user_extra_form.Bio }}
+          <label class="small font-weight-bold">{{ user_extra_form.Phone.label }}</label>
+          {{ user_extra_form.Phone }} {% endcomment %}
+
           <button class="btn btn-primary btn-block py-2 mb-4 mt-5 fw-bold w-100" type="submit"
               value="Save changes">Save Changes</button>
           <hr class="mb-3">
