--- a/static/css/user.css
+++ b/static/css/user.css
@@ -25,3 +25,22 @@
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
+/* nested dropdown-menu */
+
+.dropdown-menu li {
+  position: relative;
+}
+.dropdown-menu .dropdown-submenu {
+  display: none;
+  position: absolute;
+  left: 100%;
+  top: -7px;
+}
+.dropdown-menu .dropdown-submenu-left {
+  right: 100%;
+  left: auto;
+}
+.dropdown-menu > li:hover > .dropdown-submenu {
+  display: block;
+}
