--- a/templates/base.html
+++ b/templates/base.html
@@ -19,8 +19,7 @@
     <!-- Google Fonts Roboto -->
     <link
       rel="stylesheet"
-      href="{% static 'fonts/googleapis' %}"
-      {% comment %} href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" {% endcomment %}
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
     />
     <!-- MDB -->
     <link rel="stylesheet" href="{% static 'css/mdb.min.css' %}" />
