--- a/templates/top_nav.html
+++ b/templates/top_nav.html
@@ -58,6 +58,9 @@
                   <a class="dropdown-item" href="{% url 'perfiles:edit_profile' %}">{% translate "Edit profile" %}</a>
                 </li>
                 <li>
+                  <a class="dropdown-item" href="{% url 'perfiles:edit_extra_profile' %}">{% translate "Edit Extra profile" %}</a>
+                </li>
+                <li>
                   <a class="dropdown-item" href="{% url 'perfiles:direcciones' %}">{% translate "Add address" %}</a>
                 </li>
                 <li>
