renderizar una vista dos formularios

--- a/templates/perfiles/edit_profile.html
+++ b/templates/perfiles/edit_profile.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block head_title %}
-  {% translate "Edit" %} - {{ profile.user.username }}
+  {% translate "Edit Profile" %} - {{ profile.user.username }}
 {% endblock head_title %}
 
 {% block content %}
@@ -25,9 +25,9 @@
 
         <form class="account-form px-4 pt-4" method="post" enctype="multipart/form-data">
 
-          {% if user_form.is_valid %}
+          {% if profile_form.is_valid %}
             <div class="alert alert-primary" role="alert">
-              Details successfully updated!
+              Profile successfully updated!
             </div>
             <p class="small text-center pt-0">
               <a href="{% url "perfiles:perfil" user.username %}">Back to Profile</a>
@@ -37,14 +37,14 @@
             <p>You can edit your account using the following form:</p>
           {% endif %}
 
-          {% if user_form.errors %}
+          {% if profile_form.errors %}
             <div class="alert alert-primary" role="alert">
-              {% for field in forms %}
+              {% for field in profile_forms %}
                 {% for error in field.errors %}
                   {{ error|escape }}
                 {% endfor %}
               {% endfor %}
-              {% for error in form.non_field_errors %}
+              {% for error in profile_form.non_field_errors %}
                 {{ error|escape }}
               {% endfor %}
               Error: Please try again!
@@ -60,20 +60,24 @@
           {{ user_form.first_name }}
           <label class="small font-weight-bold">{{ user_form.last_name.label }}</label>
           {{ user_form.last_name }}
+{% comment %}
+          <label class="small font-weight-bold">{{ profile_form.picture.label }}</label>
+          {{ profile_form.picture }}
+          <label class="small font-weight-bold">{{ profile_form.banner.label }}</label>
+          {{ profile_form.banner }}
+          <label class="small font-weight-bold">{{ profile_form.url.label }}</label>
+          {{ profile_form.url }}
+          <label class="small font-weight-bold">{{ profile_form.birthday.label }}</label>
+          {{ profile_form.birthday }} {% endcomment %}
+          <label class="small font-weight-bold">{{ profile_form.bio.label }}</label>
+          {{ profile_form.bio }}
+          <label class="small font-weight-bold">{{ profile_form.phone.label }}</label>
+          {{ profile_form.phone }}
+          <label class="small font-weight-bold">{{ profile_form.mobile.label }}</label>
+          {{ profile_form.mobile }}
 
-          {% comment %} <label class="small font-weight-bold">{{ user_extra_form.parent.label }}</label>
-          {{ user_extra_form.parent }}
-          <label class="small font-weight-bold">{{ user_extra_form.picture.label }}</label>
-          {{ user_extra_form.picture }}
-          <label class="small font-weight-bold">{{ user_extra_form.Banner.label }}</label>
-          {{ user_extra_form.Banner }}
-          <label class="small font-weight-bold">{{ user_extra_form.Bio.label }}</label>
-          {{ user_extra_form.Bio }}
-          <label class="small font-weight-bold">{{ user_extra_form.Phone.label }}</label>
-          {{ user_extra_form.Phone }} {% endcomment %}
-
-          <button class="btn btn-primary btn-block py-2 mb-4 mt-5 fw-bold w-100" type="submit"
-              value="Save changes">Save Changes</button>
+          <input id='form-button' class="btn btn-primary btn-block py-2 mb-4 mt-5 fw-bold w-100" type="submit"
+              value="Guardar Cambios"></input>
           <hr class="mb-3">
         </form>
       </div>
