--- a/templates/perfiles/detail.html
+++ b/templates/perfiles/detail.html
@@ -72,11 +72,24 @@
               </div>
               {% endif %}
 
-              <div class="d-flex justify-content-between align-items-center mb-4">
+              <div class="d-flex justify-content-between align-items-center mb-3">
                 <p class="lead fw-normal mb-1">Datos de la cuenta</p>
                 <p class="mb-0"><a href="#!" class="text-muted small">Necesito ayuda</a></p>
               </div>
-              <div class="p-4" style="background-color: #f8f9fa;">
+              <div class="p-3" style="background-color: #f8f9fa;">
+                <div class="row">
+                  <div class="col-sm-3">
+                    <p class="mb-0">Nombre</p>
+                  </div>
+                  <div class="col-sm-9">
+                    <p class="text-muted mb-0">
+                      {% filter upper %}
+                        {{ profile.user.first_name }} {{ profile.user.last_name }}
+                      {% endfilter %}
+                    </p>
+                  </div>
+                </div>
+                <hr>
                 <div class="row">
                   <div class="col-sm-3">
                     <p class="mb-0">Usuario</p>
@@ -95,24 +108,11 @@
                   </div>
                 </div>
               </div>
-              <div class="d-flex justify-content-between align-items-center mt-4 mb-4">
+              <div class="d-flex justify-content-between align-items-center mt-4 mb-3">
                 <p class="lead fw-normal mb-0">Datos Personales</p>
                 <p class="mb-0"><a href="#!" class="text-muted small">Necesito ayuda</a></p>
               </div>
-              <div class="p-4" style="background-color: #f8f9fa;">
-                <div class="row">
-                  <div class="col-sm-3">
-                    <p class="mb-0">Nombre Completo</p>
-                  </div>
-                  <div class="col-sm-9">
-                    <p class="text-muted mb-0">
-                      {% filter upper %}
-                        {{ profile.user.first_name }} {{ profile.user.last_name }}
-                      {% endfilter %}
-                    </p>
-                  </div>
-                </div>
-                <hr>
+              <div class="p-3" style="background-color: #f8f9fa;">
                 <div class="row">
                   <div class="col-sm-3">
                     <p class="mb-0">Teléfono</p>
