--- a/templates/top_nav.html
+++ b/templates/top_nav.html
@@ -55,10 +55,7 @@
               <a class="dropdown-item" href="#">{% translate "Settings" %} &raquo;</a>
               <ul class="dropdown-menu dropdown-submenu">
                 <li>
-                  <a class="dropdown-item" href="{% url 'perfiles:edit_profile' %}">{% translate "Edit profile" %}</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="{% url 'perfiles:edit_extra_profile' %}">{% translate "Edit Extra profile" %}</a>
+                  <a class="dropdown-item" href="{% url 'perfiles:edit_profile' %}">{% translate "Edit Profile" %}</a>
                 </li>
                 <li>
                   <a class="dropdown-item" href="{% url 'perfiles:direcciones' %}">{% translate "Add address" %}</a>
