--- a/templates/top_nav.html
+++ b/templates/top_nav.html
@@ -19,7 +19,7 @@
 
     <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item px-2"><a class="nav-link fw-medium active" aria-current="page" href="#categoryWomen">Women</a></li>
+        <li class="nav-item px-2"><a class="nav-link fw-medium active" aria-current="page" href="{% url 'products:products' %}">Products</a></li>
         <li class="nav-item px-2"><a class="nav-link fw-medium" href="#header">Men</a></li>
         <li class="nav-item px-2"><a class="nav-link fw-medium" href="#collection">Collection</a></li>
         <li class="nav-item px-2"><a class="nav-link fw-medium" href="#outlet">Outlet</a></li>
