--- a/templates/products/product_list.html
+++ b/templates/products/product_list.html
@@ -33,7 +33,7 @@
             {% for product in media %}
               <div class="col-md-3 col-lg-2 mb-4">
                 <div class="card h-100">
-                  <a href="{% url 'products:product_detail' product.id %}">
+                  <a href="{% url 'products:media_detail' product.id %}">
                     <img
                       src="{{ product.image.url }}"
                       class="card-img-top"
