--- a/templates/top_nav.html
+++ b/templates/top_nav.html
@@ -37,13 +37,13 @@
             data-mdb-toggle="dropdown"
             aria-expanded="false">
             <img
-              src="{{ profile.picture.url }}"
+              src="{{ user.profile.picture.url }}"
               class="rounded-circle me-1"
               height="25"
               alt=""
               loading="lazy"
             />
-            <span class="text-muted me-3">{{ profile.user.username }}</span>
+            <span class="text-muted me-3">{{ user.username }}</span>
           </a>
           <ul
             class="dropdown-menu dropdown-menu-end me-10"
