--- a/templates/index.html
+++ b/templates/index.html
@@ -86,8 +86,10 @@
               </div>
             </div>
           {% endfor %}
+          {% include "pagination.html" with page=page_obj %}
         </div> <!-- /row -->
       </div>
+
     </section>
   </main>
 {% endblock content %}
