--- a/templates/detail.html
+++ b/templates/detail.html
@@ -47,17 +47,11 @@
                   <p class="card-text">
                     {{ post.inventory.product.description }}
                   </p>
-                  <form method="POST">
+                  <form action="{% url 'cart:cart_add' post.id %}" method="POST">
                     {% csrf_token %}
-                    {{ form|crispy }}
+                    {{ cart_product_form|crispy }}
+                    <input type="submit" class="btn btn-primary btn-md my-0 p" value="{% translate "Add to cart" %}">
                   </form>
-                  <a href="{{ object.get_add_to_cart_url }}" class="btn btn-primary btn-md my-0 p">
-                    {% translate "Add to cart" %}
-                    <i class="fas fa-shopping-cart ml-1"></i>
-                  </a>
-                  <a href="{{ object.get_remove_from_cart_url }}" class="btn btn-danger btn-md my-0 p">
-                    {% trans "Remove from cart" %}
-                  </a>
                 </div>
               </div>
             </div>
