--- a/templates/top_nav.html
+++ b/templates/top_nav.html
@@ -77,7 +77,7 @@
               <a class="dropdown-item" href="{% url 'account_logout' %}">{% translate "Log out" %}</a>
             </li>
           </ul>
-          <a class="text-1000" href="#">
+          <a class="text-1000" href="{% url 'cart:cart_detail' %}">
             <span class="badge badge-pill bg-danger">2</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-cart me-3"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
           </a>
@@ -117,7 +117,7 @@
       {% else %}
         <form class="d-flex">
           {% csrf_token %}
-          <a class="text-1000" href="/">
+          <a class="text-1000" href="{% url 'cart:cart_detail' %}">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-cart me-3"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
           </a>
           <a class="text-1000 me-3" href="/">
