--- a/templates/cart/detail.html
+++ b/templates/cart/detail.html
@@ -31,7 +31,14 @@
               </a>
             </td>
             <td> {{ product.title }} </td>
-            <td> {{ item.quantity }} </td>
+            <td>
+              <form action="{% url 'cart:cart_add' product.id %}" method="POST">
+                {% csrf_token %}
+                {{ item.update_quantity_form.quantity }}
+                {{ item.update_quantity_form.override }}
+                <input type="submit" value="Update">
+              </form>
+            </td>
             <td>
               <form action="{% url 'cart:cart_remove' product.id %}" method="post">
                 <input type="submit" value="Remove">
