--- a/templates/cart/detail.html
+++ b/templates/cart/detail.html
@@ -9,56 +9,58 @@
 {% endblock head_title %}
 
 {% block content %}
-  <h1>Shopping Cart</h1>
-  <table class='table'>
-    <thead>
-      <tr>
-        <th>Image</th>
-        <th>Product</th>
-        <th>Quantity</th>
-        <th>Remove</th>
-        <th>Unit Price</th>
-        <th>Price</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for item in cart %}
-        {% with  product=item.product  %}
-          <tr>
-            <td>
-              <a href="{{ product.get_absolute_url }}">
-                <img height="35" src="{% if product.image.image %}{{ product.image.image.url }}{% else %}{% static 'img/no_image.png' %}{% endif %}">
-              </a>
-            </td>
-            <td> {{ product.title }} </td>
-            <td>
-              <form action="{% url 'cart:cart_add' product.id %}" method="POST">
-                {% csrf_token %}
-                {{ item.update_quantity_form.quantity }}
-                {{ item.update_quantity_form.override }}
-                <input type="submit" value="Update">
-              </form>
-            </td>
-            <td>
-              <form action="{% url 'cart:cart_remove' product.id %}" method="post">
-                <input type="submit" value="Remove">
-                {% csrf_token %}
-              </form>
-            </td>
-            <td class="num">${{ item.price|intcomma }}</td>
-            <td class="num">${{ item.total_price|intcomma }}</td>
-          </tr>
-        {% endwith %}
-      {% endfor %}
-      <tr class="total">
-        <td>Total</td>
-        <td colspan="4"></td>
-        <td class="num">$ {{ cart.get_total_price|intcomma }}</td>
-      </tr>
-    </tbody>
-  </table>
-  <p class="text-right">
-    <a href="{% url 'store:home' %}" class="buttonlight">Continue Shopping</a>
-    <a href="#">CheckOut</a>
-  </p>
+  <div class = "container">
+    <h1>Shopping Cart</h1>
+    <table class='table'>
+      <thead>
+        <tr>
+          <th>Image</th>
+          <th>Product</th>
+          <th>Quantity</th>
+          <th>Remove</th>
+          <th>Unit Price</th>
+          <th>Price</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for item in cart %}
+          {% with  product=item.product  %}
+            <tr>
+              <td>
+                <a href="{{ product.get_absolute_url }}">
+                  <img height="35" src="{% if product.image.image %}{{ product.image.image.url }}{% else %}{% static 'img/no_image.png' %}{% endif %}">
+                </a>
+              </td>
+              <td> {{ product.title }} </td>
+              <td>
+                <form action="{% url 'cart:cart_add' product.id %}" method="POST">
+                  {% csrf_token %}
+                  {{ item.update_quantity_form.quantity }}
+                  {{ item.update_quantity_form.override }}
+                  <input type="submit" value="Update">
+                </form>
+              </td>
+              <td>
+                <form action="{% url 'cart:cart_remove' product.id %}" method="post">
+                  <input type="submit" value="Remove">
+                  {% csrf_token %}
+                </form>
+              </td>
+              <td class="num">$ {{ item.price|intcomma }}</td>
+              <td class="num">$ {{ item.total_price|intcomma }}</td>
+            </tr>
+          {% endwith %}
+        {% endfor %}
+        <tr class="total">
+          <td>Total</td>
+          <td colspan="4"></td>
+          <td class="num">$ {{ cart.get_total_price|intcomma }}</td>
+        </tr>
+      </tbody>
+    </table>
+    <p class="text-right">
+      <a href="{% url 'store:home' %}" class="btn btn-primary">Continue Shopping</a>
+      <a href="{% url 'cart:checkout' %}" class="btn btn-warning">CheckOut</a>
+    </p>
+  </div>
 {% endblock content %}
