--- a/templates/middle_nav.html
+++ b/templates/middle_nav.html
@@ -4,7 +4,7 @@
 
 <div class="container">
   <nav class="navbar navbar-expand-lg navbar-light bg-light mt-7">
-    <div class="container-fluid justify-content-between">
+    <div class="justify-content-between">
       <button
         class="navbar-toggler"
         type="button"
