--- a/templates/detail.html
+++ b/templates/detail.html
@@ -20,8 +20,8 @@
           <div class="row g-0">
             <div class="col-md-5 d-flex justify-content-end">
               <img
-                src="{{ object.image.image.url }}"
-                alt="{{ post.image.alt_text }}"
+                src="{{ object.inventory.product.media.image.url }}"
+                alt="{{ post.inventory.product.media.alt_text }}"
                 class="img-fluid"
               />
             </div>
