--- a/templates/cart/checkout.html
+++ b/templates/cart/checkout.html
@@ -32,20 +32,21 @@
                 </div>
             </div>
         {% else %}
-            <form method="POST">
-                {% csrf_token %}
+
                 <div class="row">
                     <div class="col-md-6 mb-md-0">
-                        <h2 class="h3 mb-3 text-black text-center">Billing Details</h2>
-                        <hr />
-                        <div class="p-2 p-lg-2">
-                            {{ form|crispy }}
-                        </div>
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-success btn-lg py-3 btn-block">
-                                Proceed to Payment
-                            </button>
-                        </div>
+                        <form method="POST"> {% csrf_token %}
+                            <h2 class="h3 mb-3 text-black text-center">Billing Details</h2>
+                            <hr />
+                            <div class="p-2 p-lg-2">
+                                {{ form|crispy }}
+                            </div>
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-success btn-lg py-3 btn-block">
+                                    Proceed to Payment
+                                </button>
+                            </div>
+                        </form>
                     </div>
                     <div class="col-md-6">
                         <div class="row">
@@ -89,7 +90,7 @@
                         </div>
                     </div>
                 </div> <!-- /row -->
-            </form>
+
         {% endif %}
     </div> <!-- /container -->
 {% endblock content %}
